✅ Milestone 3+4:  complete poster generation flow with backend integration
- Upload user image to Firebase Storage and retrieve public URL
- Call generatePoster Cloud Function with full poster data (template, car details, description, user image)
- Store generated poster metadata in Firestore under /users/{uid}/posters
- Display poster preview and download link in UI
- Enforce storage rules to restrict uploads per user
- Add error handling and ensure function stability with CORS and auth

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/functions": "^0.12.8",
     "firebase": "^11.8.1",
+    "firebase-functions": "^6.3.2",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
