--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -7,7 +7,7 @@
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "npx eslint . --fix && npm run build && firebase deploy --only functions:generatePoster",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -15,13 +15,16 @@
   },
   "main": "lib/src/index.js",
   "dependencies": {
+    "chrome-aws-lambda": "^1.20.1",
     "cors": "^2.8.5",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.1.0",
-    "puppeteer": "^24.9.0",
+    "puppeteer-core": "^1.20.0",
+    "raw-body": "^3.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/puppeteer-core": "^5.4.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
