--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -7,7 +7,9 @@
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "npx eslint . --fix && npm run build && firebase deploy --only functions:generatePoster",
+    "lintbuild": "npx eslint . --fix  && npm run build",
+    "deployGeneratePoster": "npx eslint . --fix && npm run build && firebase deploy --only functions:generatePoster",
+    "deployGemini": "npx eslint . --fix && npm run build && firebase deploy --only functions:detectCarDetailsWithGemini && firebase deploy --only functions:generateCarDescriptionWithGemini",
     "deployhosting": "cd .. && firebase deploy --only hosting",
     "logs": "firebase functions:log"
   },
@@ -16,15 +18,17 @@
   },
   "main": "lib/src/index.js",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "chrome-aws-lambda": "^1.20.1",
     "cors": "^2.8.5",
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^5.1.0",
+    "firebase-functions": "^5.1.1",
     "puppeteer-core": "^1.20.0",
     "raw-body": "^3.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/node": "^22.15.30",
     "@types/puppeteer-core": "^5.4.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
