--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@firebase/functions": "^0.12.8",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^11.8.1",
     "firebase-functions": "^6.3.2",
     "next": "15.3.2",
