--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -25,6 +25,7 @@
     "firebase-functions": "^5.1.1",
     "puppeteer-core": "^1.20.0",
     "raw-body": "^3.0.0",
+    "sharp": "^0.34.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
