--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "browser-image-compression": "^2.0.2",
     "firebase": "^11.8.1",
     "firebase-functions": "^6.3.2",
+    "framer-motion": "^12.18.1",
     "ldrs": "^1.1.7",
     "next": "15.3.2",
     "react": "^19.0.0",
