--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "ldrs": "^1.1.7",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.4.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
