--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -21,6 +21,8 @@
     "@google/generative-ai": "^0.24.1",
     "chrome-aws-lambda": "^1.20.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.1.1",
     "puppeteer-core": "^1.20.0",
