--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -9,6 +9,7 @@
     "start": "npm run shell",
     "lintbuild": "npx eslint . --fix  && npm run build",
     "deployGeneratePoster": "npx eslint . --fix && npm run build && firebase deploy --only functions:generatePosterOnJobCreate",
+    "deployGenerateThumbnails": "npx eslint . --fix && npm run build && firebase deploy --only functions:generatePosterThumbnail",
     "deployGemini": "npx eslint . --fix && npm run build && firebase deploy --only functions:detectCarDetailsWithGemini && firebase deploy --only functions:generateCarDescriptionWithGemini",
     "deployhosting": "cd .. && firebase deploy --only hosting",
     "logs": "firebase functions:log"
