--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -26,6 +26,7 @@
     "date-fns-tz": "^3.2.0",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.1.1",
+    "node-fetch": "^2.7.0",
     "puppeteer-core": "^1.20.0",
     "raw-body": "^3.0.0",
     "sharp": "^0.34.2",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.30",
+    "@types/node-fetch": "^2.6.13",
     "@types/puppeteer-core": "^5.4.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
